    partman-basicfilesystems 76ubuntu1, partman-basicmethods 51,
    partman-ext3 72ubuntu1, partman-jfs 37, partman-newworld 28, preseed
    1.55ubuntu1.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 07 Nov 2012 15:27:43 +0000

ubiquity (2.12.17) UNRELEASED; urgency=low

  * Clear "Read release notes or update the installer" if neither action
    are possible. (LP: #1066302)

 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Wed, 17 Oct 2012 14:29:17 +0100

ubiquity (2.12.16) quantal-proposed; urgency=low

  * Change get_grub_choice implementation to use get_current_disk_partman_id
    instead of get_autopartition_choice so it doesn't need to parse strings.
    Implement get_current_disk_partman_id in Kde frontend to use the same code.
    (LP: #1067691)

 -- Stéphane Graber <stgraber@ubuntu.com>  Wed, 17 Oct 2012 14:34:35 +0200

ubiquity (2.12.15) quantal-proposed; urgency=low

  * Make sure not to remove the signed kernel if we need it (LP: #1067659).
  * Copy the signed kernel from /cdrom/casper/vmlinuz.efi.signed.
    /cdrom/casper/vmlinuz needs to remain unsigned to avoid breaking
    checksums.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 17 Oct 2012 11:38:04 +0100

ubiquity (2.12.14) quantal-proposed; urgency=low

  * Add extra checks when determining boot parameter for grub_default,
    which prevents crashing the installer upton entering manual
    partitioning (LP: #1067566)

 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Wed, 17 Oct 2012 05:29:04 +0100

ubiquity (2.12.13) quantal-proposed; urgency=low

  [ Dmitrijs Ledkovs ]
  * Do not allow to edit locked partitions via double click in the Gtk
    Treeview. (LP: #1057690)

  [ Colin Watson ]
  * Fix "Mangement" typo (thanks, Yuri Chornoivan; LP: #1067228).
  * Update translations from Launchpad.

  [ Stéphane Graber ]
  * Add an extra parameter to grub_default so that the UI can force it to use a
    specific device rather than scan for / and /boot.